tests/ui/try_transmute_ref-dst-mutable.nightly.stderr
error[E0308]: mismatched types
   --> $DIR/try_transmute_ref-dst-mutable.rs:16:33
    |
 16 |     let _: Result<&mut u8, _> = try_transmute_ref!(&0u8);
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
    |                                 |
    |                                 types differ in mutability
    |                                 arguments to this enum variant are incorrect
    |
    = note: expected mutable reference `&mut u8`
                       found reference `&_`
help: the type constructed contains `&_` due to the type of the argument passed
   --> $DIR/try_transmute_ref-dst-mutable.rs:16:33
    |
 16 |     let _: Result<&mut u8, _> = try_transmute_ref!(&0u8);
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ this argument influences the type of `Ok`
note: tuple variant defined here
   --> /usr/local/google/home/joshlf/.rustup/toolchains/nightly-2026-01-25-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/result.rs:561:5
    |
561 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/try_transmute_ref-dst-mutable.rs:16:33
   |
16 |     let _: Result<&mut u8, _> = try_transmute_ref!(&0u8);
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected enum `Result<&mut u8, _>`
              found enum `Result<&_, ValidityError<&u8, _>>`
   = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
